# microcontroller-projects

./: .gitignore  README.md
Color Generator/: connections.txt  readme.txt
Color Generator/ESP32/: CMakeLists.txt  main.c  uart_config.c  uart_config.h
Color Generator/TivaC/: Keil_config.txt
Color Generator/TivaC/inc/: color_generator.h  io_handler.h  utils.h
Color Generator/TivaC/src/: color_generator.c  io_handler.c  main.c  startup_rvmdk.S  utils.c
I2C_demo/: connections.txt  readme.txt
I2C_demo/ESP32/Arduino/i2c_test/: i2c_test.ino
I2C_demo/ESP32/Eclipse/: CMakeLists.txt  gpio_confg.h  gpio_config.c  i2c_s.c  i2c_s.h  main.c
I2C_demo/TivaC/: Keil_config.txt
I2C_demo/TivaC/inc/: delay.h  i2c_config.h
I2C_demo/TivaC/src/: delay.c  i2c_config.c
SPI_demo/: README.md  connections.txt  readme.txt
SPI_demo/ESP32/: CMakeLists.txt  main.c  spi_m.c  spi_m.h
SPI_demo/TivaC/: Keil_config.md
SPI_demo/TivaC/inc/: spi_control.h  uart_logging.h
SPI_demo/TivaC/src/: main.c  spi_control.c  uart_logging.c
